# gateway

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
infra/app/: Dockerfile  entrypoint.sh
infra/nginx/: default.conf
src/core/: api_gateaway_urls.py  api_router.py  base_http_client.py  celery.py  settings.py  urls.py
src/errors/: exceptions.py
src/gateway/: apps.py  http_client.py  tasks.py
src/gateway/api/: serializers.py  views.py
tests/: locustfile.py
