[tool.poetry]
name = "gateway"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
pre-commit = "3.6.2"
django = "4.2"
djangorestframework = "3.14.0"
django-environ = "0.11.2"
drf-yasg = "1.21.7"
django-celery-beat = "2.5.0"
celery = "5.3.4"
redis = "5.0.1"
flower = "2.0.1"
httpx = "0.25.0"
gunicorn = "21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
lint.ignore-init-module-imports = true
src = ["src"]
lint.select = [
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
]
lint.ignore = ["F401", "N806"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint.isort]
known-first-party  = [
    "src"
]

[tool.black]
line-length = 120